--- a/components/go-vnlfsgor/overlays/development/deployment-patch.yaml
+++ b/components/go-vnlfsgor/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: go-vnlfsgor
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/go-vnlfsgor:af1c6a2a4aa16a43012b6ad5ea0fb7b8aa14d076@sha256:1f7cddab0991d439cddc0259f20849c51ef41c85f4202484385b03f20a95c0e4
+          name: container-image
